2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Use the OnDestroyed
	  event instead of Dispose, since with the latest changes in gtk#,
	  Dispose is not called anymore when a widget is destroyed.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/AlertDialog.cs,
	  MonoDevelop.Core.Gui/MessageService.cs: Make font smaller for
	  alterts with only primary text.
	* MonoDevelop.Core.Gui.ProgressMonitoring/MessageDialogProgressMonitor.cs:
	  Added missing null check.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.ProgressMonitoring/BaseProgressMonitor.cs: Make
	  sure all async method calls are finished before disposing the
	  progress monitor.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Add some more spacing
	  between panels.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Merged the extension
	  points for project and solution option panels into a single
	  extension point. A single extension point will now be used for all
	  kinds of items. Extension conditions can be used to make panels
	  visible only for some specific item types.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs,
	  MonoDevelop.Core.Gui.Components/MenuButtonEntry.cs,
	  MonoDevelop.Core.Gui.Codons/OptionsPanelNode.cs,
	  MonoDevelop.Core.Gui/StockIcons.cs,
	  MonoDevelop.Core.Gui/DispatchService.cs, Makefile.am,
	  icons/solution-folder-open-16.png,
	  icons/solution-folder-closed-16.png,
	  MonoDevelop.Core.Gui.addin.xml: New project model changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui/PlatformService.cs: Add a method for determining