@@ -1,3 +1,8 @@
+2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Core.Gui/SyncContext.cs: Avoid name colisions when
+	  creating sync delegates.
+
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Core.Gui.addin.xml: Bump MD version.
